--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,10 @@ actix-web = "4"
 rusqlite = { version = "0.33.0", features = ["bundled"] }
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.137"
+
+actix-web-httpauth = "0.8.0"
+argonautica = "0.2.0"
+hmac = "0.12.1"
+jwt = "0.16.0"
+sha2 = "0.10.6"
+dotenv = "0.15.0"
