--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,14 @@ hmac = "0.12.1"
 jwt = "0.16.0"
 sha2 = "0.10.6"
 dotenv = "0.15.0"
+actix-cors = "0.7.0"
+http = "1.0.0"
+
+
+[dependencies.uuid]
+version = "1.12.1"
+features = [
+    "v4",                # Lets you generate random UUIDs
+    "fast-rng",          # Use a faster (but still sufficiently random) RNG
+    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
+]
