--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,9 @@ dotenv = "0.15.0"
 actix-cors = "0.7.0"
 http = "1.0.0"
 chrono = "0.4.39"
+actix-multipart = "0.6"
+futures-util = "0.3"
+
 
 
 [dependencies.uuid]
